--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,18 @@
 name: PR Review Alert
 
 on:
-  pull_request_review:
-    types: [submitted]
-  pull_request_review_comment:
+  issue_comment:
     types: [created]
 
 jobs:
   slack-alert:
+    if: github.event.issue.pull_request != null
     runs-on: ubuntu-latest
     steps:
       - name: Extract Labels
         id: labels
         run: |
-          echo "labels=$(echo '${{ toJson(github.event.pull_request.labels) }}' | jq -r '.[].name' | paste -sd "," -)" >> $GITHUB_ENV
+          echo "labels=$(echo '${{ toJson(github.event.issue.labels) }}' | jq -r '.[].name' | paste -sd "," -)" >> $GITHUB_ENV
 
       - name: Send Slack Message
         uses: slackapi/slack-github-action@v1.24.0
@@ -21,13 +20,13 @@ jobs:
           payload: |
             {
               "channel": "C09CPH5KJ3T",
-              "text": "🤖 A PR was reviewed!",
+              "text": "🤖 A PR was reviewed by Qodo!",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "*Title:* ${{ github.event.pull_request.title }}\n*State:* ${{ github.event.review.state }}\n*Labels:* ${{ env.labels }}\n<${{ github.event.pull_request.html_url }}|View PR>"
+                    "text": "*Title:* ${{ github.event.issue.title }}\n*Labels:* ${{ env.labels }}\n<${{ github.event.issue.html_url }}|View PR>"
                   }
                 }
               ]
