--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
             echo "PR_NUMBER=${{ github.event.issue.number }}" >> $GITHUB_ENV
             echo "PR_TITLE=$(gh pr view ${{ github.event.issue.number }} --json title -q .title)" >> $GITHUB_ENV
             echo "PR_URL=$(gh pr view ${{ github.event.issue.number }} --json url -q .url)" >> $GITHUB_ENV
+            # Get labels as a comma-separated string
+            echo "PR_LABELS=$(gh pr view ${{ github.event.issue.number }} --json labels -q '.labels[].name' | paste -sd ',' -)" >> $GITHUB_ENV
             echo "REPO_NAME=${{ github.repository }}" >> $GITHUB_ENV
             echo "OWNER=${{ github.repository_owner }}" >> $GITHUB_ENV
           else
@@ -34,7 +36,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "*Title:* ${{ env.PR_TITLE }}\n<${{ env.PR_URL }}|View PR>"
+                    "text": "*Title:* ${{ env.PR_TITLE }}\n*Labels:* ${{ env.PR_LABELS }}\n<${{ env.PR_URL }}|View PR>"
                   }
                 },
                 {
@@ -57,3 +59,4 @@ jobs:
             }
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
